# agentic-research-pulse

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: eval.yml
.rules/: ARCHITECTURE_RULES.md
backend/: .dockerignore  Dockerfile  celery_worker.py  main.py  pyproject.toml
backend/app/: config.py  constants.py  database.py  exceptions.py
backend/app/agents/: __init__.py  base.py  extract_agent.py  orchestrator.py  search_agent.py  synthesis_agent.py
backend/app/api/: __init__.py  dlq.py  metrics.py  reviews.py  stream.py  topics.py  traces.py
backend/app/jobs/: __init__.py  process_paper_job.py  refresh_review_job.py  run_pipeline_job.py
backend/app/models/: __init__.py  agent_outputs.py  claim.py  metrics.py  paper.py  review.py  topic.py  trace.py
backend/app/observability/: cost.py  langsmith.py  logging.py
backend/app/pipelines/: research_pipeline.py
backend/app/repositories/: __init__.py  paper_repository.py  review_repository.py  topic_repository.py  trace_repository.py
backend/app/resilience/: circuit_breaker.py  retry.py
backend/app/services/: __init__.py  dlq_service.py  embedding_service.py  metrics_service.py  paper_service.py  review_service.py  stream_service.py  topic_service.py  trace_service.py
backend/app/tools/: __init__.py  arxiv_tools.py  openalex_tools.py  semantic_scholar_tools.py  synthesis_tools.py  vector_tools.py
backend/scripts/: eval.py
backend/tests/: conftest.py
backend/tests/integration/: test_full_pipeline.py
backend/tests/unit/: test_arxiv_tools.py  test_citation_validator.py  test_process_paper_idempotency.py  test_search_agent.py  test_synthesis_tools.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  suggestions.ts
frontend/src/app/research/[topicId]/: page.tsx
frontend/src/app/review/[id]/: page.tsx
(+1 files in other folders)
