[project]
name = "researchpulse"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.30.0",
    "instructor>=1.3.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "flower>=2.0.1",
    "chromadb>=0.5.0,<0.6.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "feedparser>=6.0.11",
    "tenacity>=8.3.0",
    "tiktoken>=0.7.0",
    "sentence-transformers>=3.0.0",
    "python-multipart>=0.0.9",
    "langsmith>=0.1.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ragas>=0.1.0",
    "datasets>=2.20.0",
    "langchain-openai>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that call real external services (deselect with -m 'not integration')",
]
